# ML_project

./: .gitignore  Dockerfile.app  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
migrations/: env.py  script.py.mako
migrations/versions/: 0265f47d2c0c_document.py  2347f0e81151_init.py  25acfc68aaeb_token.py  6e259a4f8cfe_user_chat_history.py  efe5fde3050a_changes.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: auth.py  document.py  file_manager.py
src/routes/: auth.py  document.py  pdf_routes.py
src/services/: auth.py  text_processing_service.py
src/services/pages/: chat.html  registration.html
src/services/templates/: 404.html  chat.html  index.html  load_pdf.html  login.html  rate.html  registration.html
